Fix issue with excess whitespace on login page

--- a/client/src/components/ChatBox/ChatBox.module.css
+++ b/client/src/components/ChatBox/ChatBox.module.css
@@ -7,5 +7,6 @@
 
 	&& > span {
 		font-size: 1.5rem;
+		text-align: center;
 	}
 }
