--- a/client/src/components/LogInPage/LogInPage.css
+++ b/client/src/components/LogInPage/LogInPage.css
@@ -6,12 +6,12 @@ div.centerContent {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	padding-top: 100px;
 	gap: 20px;
 }
 
 div.title {
 	font-size: 2rem;
+	margin-top: 100px;
 }
 
 div.input {
